lib/animemaster_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// This file is normally generated by `package:ffigen`.
// It is kept in sync manually because libclang is not available
// in the current local environment.
// ignore_for_file: type=lint, unused_import

import 'dart:ffi' as ffi;

/// Bindings for `src/animemaster.h`.
class AnimemasterBindings {
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  AnimemasterBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  AnimemasterBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  bool initializeEngineCore() {
    return _initializeEngineCore();
  }

  late final ffi.Pointer<ffi.NativeFunction<ffi.Bool Function()>>
  _initializeEngineCorePtr = _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
    'InitializeEngineCore',
  );
  late final bool Function() _initializeEngineCore = _initializeEngineCorePtr
      .asFunction<bool Function()>();

  ffi.Pointer<ffi.Char> getEngineVersion() {
    return _getEngineVersion();
  }

  late final ffi.Pointer<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>
  _getEngineVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'GetEngineVersion',
      );
  late final ffi.Pointer<ffi.Char> Function() _getEngineVersion =
      _getEngineVersionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> parseMagnetLink(ffi.Pointer<ffi.Char> magnetUri) {
    return _parseMagnetLink(magnetUri);
  }

  late final ffi.Pointer<
    ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>
  >
  _parseMagnetLinkPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('ParseMagnetLink');
  late final ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
  _parseMagnetLink = _parseMagnetLinkPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> scanLocalDirectory(ffi.Pointer<ffi.Char> path) {
    return _scanLocalDirectory(path);
  }

  late final ffi.Pointer<
    ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>
  >
  _scanLocalDirectoryPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('ScanLocalDirectory');
  late final ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
  _scanLocalDirectory = _scanLocalDirectoryPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();
}
